--- a/src/index.html
+++ b/src/index.html
@@ -4,24 +4,61 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,300;0,400;0,500;0,600;0,700;0,900;1,100&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Landing Page</title>
+    <title>Adam Ralph</title>
   </head>
   <body>
-    <h1>Landing Page</h1>
-    <br />
-    <h2>Subtitle</h2>
-    <h3>Subheading</h3>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate quia
-      voluptatibus repellendus explicabo exercitationem illum
-    </p>
-    <blockquote>this is a quote</blockquote>
+    <header id="header" class="header">
+      <div class="header__logo">
+        <h1 class="header__logo__heading">adam</h1>
+      </div>
+      <!-- Twitter -->
+      <div class="header__social">
+        <a
+          href="http://twitter.com/adamjralph"
+          class="header__social__link header__social--twitter"
+        >
+          <img
+            src="./assets/img/twitter-original.svg"
+            alt="twitter"
+            class="header__social--twitter__logo"
+          />
+      <!-- Youtube-->
+      <div class="header__social">
+        <a
+          href="https://www.youtube.com/channel/UCRMH3kvPD8o1Khssr4A8EWg"
+          class="header__social__link header__social--youtube"
+        >
+          <img
+            src="./assets/img/youtube-svgrepo-com.svg"
+            alt="youtube"
+            class="header__social--youtube__logo"
+          />
+        </a>
+      </div>
+      <!-- Github -->
+      <div class="header__social">
+        <a
+          href="http://twitter.com/adamjralph"
+          class="header__social__link header__social--github"
+        >
+          <img
+            src="./assets/img/github-original.svg"
+            alt="github"
+            class="header__social--youtube__logo"
+          />
+        </a>
+      </div>
 
-    <p>
-      sequi voluptates facere alias possimus repellat eos aut dolore recusandae
-      blanditiis ducimus dolorem laborum porro placeat perspiciatis quo,
-      reiciendis dicta et quis! Magnam, soluta rerum.
-    </p>
+      <nav class="header__nav">
+
+      </nav>
+    </header>
   </body>
 </html>
