--- a/src/index.html
+++ b/src/index.html
@@ -14,51 +14,57 @@
     <title>Adam Ralph</title>
   </head>
   <body>
+    <div class="container">
     <header id="header" class="header">
-      <div class="header__logo">
-        <h1 class="header__logo__heading">adam</h1>
-      </div>
-      <!-- Twitter -->
-      <div class="header__social">
-        <a
+
+        <div class="header__logo">
+          <h1 class="header__logo__heading">adam</h1>
+        </div>
+        <!-- Twitter -->
+        <div class="header__social">
+          <a
           href="http://twitter.com/adamjralph"
           class="header__social__link header__social--twitter"
-        >
+          >
           <img
-            src="./assets/img/twitter-original.svg"
-            alt="twitter"
-            class="header__social--twitter__logo"
+          src="./assets/img/twitter-original.svg"
+              alt="twitter"
+              class="header__social--twitter__logo"
           />
-      <!-- Youtube-->
-      <div class="header__social">
-        <a
+              <!-- Youtube-->
+          <a
           href="https://www.youtube.com/channel/UCRMH3kvPD8o1Khssr4A8EWg"
           class="header__social__link header__social--youtube"
-        >
+          >
           <img
-            src="./assets/img/youtube-svgrepo-com.svg"
-            alt="youtube"
-            class="header__social--youtube__logo"
+          src="./assets/img/youtube-svgrepo-com.svg"
+          alt="youtube"
+          class="header__social--youtube__logo"
           />
-        </a>
-      </div>
-      <!-- Github -->
-      <div class="header__social">
-        <a
+          </a>
+          <!-- Github -->
+          <a
           href="http://twitter.com/adamjralph"
           class="header__social__link header__social--github"
-        >
+          >
           <img
-            src="./assets/img/github-original.svg"
-            alt="github"
-            class="header__social--youtube__logo"
+          src="./assets/img/github-original.svg"
+          alt="github"
+          class="header__social--youtube__logo"
           />
-        </a>
-      </div>
+          </a>
+        </div>
 
-      <nav class="header__nav">
+        <nav class="header__nav">
+          <a href="#about" class="header__nav__link">about</a>
+          <a href="#projects" class="header__nav__link">projects</a>
+          <button class="btn nav__btn">
+            <a href="#contact" class="header__nav__link">Lets Talk</a>
+          </button>
 
-      </nav>
-    </header>
-  </body>
-</html>
+        </nav>
+      </header>
+    </div>
+    </body>
+    </html>
+    
