--- a/public/index.html
+++ b/public/index.html
@@ -29,17 +29,17 @@
           <img
           src="./assets/img/twitter-original.svg"
               alt="twitter"
-              class="header__social--twitter__logo"
+              class="header__social__icon header__social--twitter__icon"
           />
               <!-- Youtube-->
           <a
           href="https://www.youtube.com/channel/UCRMH3kvPD8o1Khssr4A8EWg"
-          class="header__social__link header__social--youtube"
+          class="header__social--youtube"
           >
           <img
           src="./assets/img/youtube-svgrepo-com.svg"
           alt="youtube"
-          class="header__social--youtube__logo"
+          class="header__social__icon header__social--youtube__icon"
           />
           </a>
           <!-- Github -->
@@ -50,7 +50,7 @@
           <img
           src="./assets/img/github-original.svg"
           alt="github"
-          class="header__social--youtube__logo"
+          class="header__social__icon header__social--youtube__icon"
           />
           </a>
         </div>
