working on header

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/6543bd4db3.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,43 +19,31 @@
   </head>
   <body>
     <div class="container">
-    <header id="header" class="header">
-
+      <header id="header" class="header">
         <div class="header__logo">
           <h1 class="header__logo__heading">adam</h1>
         </div>
         <!-- Twitter -->
         <div class="header__social">
           <a
-          href="http://twitter.com/adamjralph"
-          class="header__social__link header__social--twitter"
+            href="http://twitter.com/adamjralph"
+            class="header__social__link header__social--twitter"
           >
-          <img
-          src="./assets/img/twitter-original.svg"
-              alt="twitter"
-              class="header__social__icon header__social--twitter__icon"
-          />
-              <!-- Youtube-->
+            <i class="fa-brands fa-twitter header__social__icon--twitter"></i>
+          </a>
+          <!-- Youtube-->
           <a
-          href="https://www.youtube.com/channel/UCRMH3kvPD8o1Khssr4A8EWg"
-          class="header__social--youtube"
+            href="https://www.youtube.com/channel/UCRMH3kvPD8o1Khssr4A8EWg"
+            class="header__social--youtube"
           >
-          <img
-          src="./assets/img/youtube-svgrepo-com.svg"
-          alt="youtube"
-          class="header__social__icon header__social--youtube__icon"
-          />
+            <i class="fa-brands fa-youtube header__social__icon--youtube"></i>
           </a>
           <!-- Github -->
           <a
-          href="http://twitter.com/adamjralph"
-          class="header__social__link header__social--github"
+            href="http://twitter.com/adamjralph"
+            class="header__social__link header__social--github"
           >
-          <img
-          src="./assets/img/github-original.svg"
-          alt="github"
-          class="header__social__icon header__social--youtube__icon"
-          />
+            <i class="fa-brands fa-github header__social__icon--github"></i>
           </a>
         </div>
 
@@ -61,10 +53,8 @@
           <button class="btn nav__btn">
             <a href="#contact" class="header__nav__link">Lets Talk</a>
           </button>
-
         </nav>
       </header>
     </div>
-    </body>
-    </html>
-    
+  </body>
+</html>
