social icons hover effect

--- a/public/index.html
+++ b/public/index.html
@@ -27,21 +27,21 @@
         <div class="header__social">
           <a
             href="http://twitter.com/adamjralph"
-            class="header__social__link header__social--twitter"
+            class="header__social__link header__social__link--twitter"
           >
             <i class="fa-brands fa-twitter header__social__icon--twitter"></i>
           </a>
           <!-- Youtube-->
           <a
             href="https://www.youtube.com/channel/UCRMH3kvPD8o1Khssr4A8EWg"
-            class="header__social--youtube"
+            class="header__social__link header__social__link--youtube"
           >
             <i class="fa-brands fa-youtube header__social__icon--youtube"></i>
           </a>
           <!-- Github -->
           <a
-            href="http://twitter.com/adamjralph"
-            class="header__social__link header__social--github"
+            href="https://github.com/adamjralph"
+            class="header__social__link header__social__link--github"
           >
             <i class="fa-brands fa-github header__social__icon--github"></i>
           </a>
