--- a/public/index.html
+++ b/public/index.html
@@ -57,4 +57,13 @@
       </header>
     </div>
   </body>
+  <div class="container">
+    <main id="main" class="hero">
+      <img
+        class="hero__image"
+        src="./assets/img/melbourne-1.jpg"
+        alt="melborne"
+      />
+    </main>
+  </div>
 </html>
