--- a/src/index.html
+++ b/src/index.html
@@ -23,47 +23,51 @@
         <div class="header__logo">
           <h1 class="header__logo__heading">adam</h1>
         </div>
-        <!-- Twitter -->
-        <div class="header__social">
-          <a
-            href="http://twitter.com/adamjralph"
-            class="header__social__link header__social__link--twitter"
-          >
-            <i class="fa-brands fa-twitter header__social__icon--twitter"></i>
-          </a>
-          <!-- Youtube-->
-          <a
-            href="https://www.youtube.com/channel/UCRMH3kvPD8o1Khssr4A8EWg"
-            class="header__social__link header__social__link--youtube"
-          >
-            <i class="fa-brands fa-youtube header__social__icon--youtube"></i>
-          </a>
-          <!-- Github -->
-          <a
-            href="https://github.com/adamjralph"
-            class="header__social__link header__social__link--github"
-          >
-            <i class="fa-brands fa-github header__social__icon--github"></i>
-          </a>
+        <div class="nav-image-container">
+          <nav class="header__nav">
+            <a href="#about" class="header__nav__link">about</a>
+            <a href="#projects" class="header__nav__link">projects</a>
+            <button class="btn nav__btn">
+              <a href="#contact" class="header__nav__link">Lets Talk</a>
+            </button>
+          </nav>
         </div>
-
-        <nav class="header__nav">
-          <a href="#about" class="header__nav__link">about</a>
-          <a href="#projects" class="header__nav__link">projects</a>
-          <button class="btn nav__btn">
-            <a href="#contact" class="header__nav__link">Lets Talk</a>
-          </button>
-        </nav>
+        <div class="social-image-container">
+          <div class="header__social">
+            <!-- Twitter -->
+            <a
+              href="http://twitter.com/adamjralph"
+              class="header__social__link header__social__link--twitter"
+            >
+              <i class="fa-brands fa-twitter header__social__icon--twitter"></i>
+            </a>
+            <!-- Youtube-->
+            <a
+              href="https://www.youtube.com/channel/UCRMH3kvPD8o1Khssr4A8EWg"
+              class="header__social__link header__social__link--youtube"
+            >
+              <i class="fa-brands fa-youtube header__social__icon--youtube"></i>
+            </a>
+            <!-- Github -->
+            <a
+              href="https://github.com/adamjralph"
+              class="header__social__link header__social__link--github"
+            >
+              <i class="fa-brands fa-github header__social__icon--github"></i>
+            </a>
+          </div>
+          <img
+            class="hero__image"
+            src="./assets/img/melbourne-1.jpg"
+            alt="melbourne"
+          />
+        </div>
       </header>
     </div>
   </body>
   <div class="container">
-    <main id="main" class="hero">
-      <img
-        class="hero__image"
-        src="./assets/img/melbourne-1.jpg"
-        alt="melborne"
-      />
+    <main id="main" class="main">
+      <section id="hero" class="hero"></section>
     </main>
   </div>
 </html>
