--- a/src/index.html
+++ b/src/index.html
@@ -30,42 +30,40 @@
           <a href="#about" class="header__nav__link">about</a>
           <a href="#projects" class="header__nav__link">projects</a>
           <button class="btn nav__btn">
-            <a href="#contact" class="header__nav__link">Lets Talk</a>
+            <a href="#contact" class="header__btn__text">Lets Talk</a>
           </button>
         </nav>
 
         <!-- Header image -->
         <img
           class="header__image"
-          src="./assets/img/melbourne-3.jpg"
+          src="./assets/img/paradise1.jpg"
           alt="melbourne"
         />
 
         <!-- Social links -->
-        <div class="social-image-container">
-          <div class="header__social">
-            <!-- Twitter -->
-            <a
-              href="http://twitter.com/adamjralph"
-              class="header__social__link header__social__link--twitter"
-            >
-              <i class="fa-brands fa-twitter header__social__icon--twitter"></i>
-            </a>
-            <!-- Youtube-->
-            <a
-              href="https://www.youtube.com/channel/UCRMH3kvPD8o1Khssr4A8EWg"
-              class="header__social__link header__social__link--youtube"
-            >
-              <i class="fa-brands fa-youtube header__social__icon--youtube"></i>
-            </a>
-            <!-- Github -->
-            <a
-              href="https://github.com/adamjralph"
-              class="header__social__link header__social__link--github"
-            >
-              <i class="fa-brands fa-github header__social__icon--github"></i>
-            </a>
-          </div>
+        <div class="header__social">
+          <!-- Twitter -->
+          <a
+            href="http://twitter.com/adamjralph"
+            class="header__social__link header__social__link--twitter"
+          >
+            <i class="fa-brands fa-twitter header__social__icon--twitter"></i>
+          </a>
+          <!-- Youtube-->
+          <a
+            href="https://www.youtube.com/channel/UCRMH3kvPD8o1Khssr4A8EWg"
+            class="header__social__link header__social__link--youtube"
+          >
+            <i class="fa-brands fa-youtube header__social__icon--youtube"></i>
+          </a>
+          <!-- Github -->
+          <a
+            href="https://github.com/adamjralph"
+            class="header__social__link header__social__link--github"
+          >
+            <i class="fa-brands fa-github header__social__icon--github"></i>
+          </a>
         </div>
       </header>
     </div>
