--- a/src/index.html
+++ b/src/index.html
@@ -14,32 +14,31 @@
       src="https://kit.fontawesome.com/6543bd4db3.js"
       crossorigin="anonymous"
     ></script>
+    <script src="./assets/js/app.js"></script>
     <link rel="stylesheet" href="./css/style.css" />
     <title>Adam Ralph</title>
   </head>
   <body>
     <div class="container">
       <header id="header" class="header">
-        <!-- Logo -->
-        <div class="header__logo">
-          <h1 class="header__logo__heading">adam</h1>
-        </div>
-
         <!-- Navigation -->
         <nav class="header__nav">
+          <button class="nav-toggle" aria-label="open navigation">
+            <span class="hamburger"></span>
+          </button>
           <a href="#about" class="header__nav__link">about</a>
           <a href="#projects" class="header__nav__link">projects</a>
           <button class="btn nav__btn">
             <a href="#contact" class="header__btn__text">Lets Talk</a>
           </button>
         </nav>
+        <!-- Logo -->
+        <div class="header__logo">
+          <h1 class="header__logo__heading">adam</h1>
+        </div>
 
         <!-- Header image -->
-        <img
-          class="header__image"
-          src="./assets/img/paradise1.jpg"
-          alt="melbourne"
-        />
+        <div class="header__image"></div>
 
         <!-- Social links -->
         <div class="header__social">
@@ -67,10 +66,10 @@
         </div>
       </header>
     </div>
+    <div class="container">
+      <main id="main" class="main">
+        <section id="hero" class="hero"></section>
+      </main>
+    </div>
   </body>
-  <div class="container">
-    <main id="main" class="main">
-      <section id="hero" class="hero"></section>
-    </main>
-  </div>
 </html>
