--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       src="https://kit.fontawesome.com/6543bd4db3.js"
       crossorigin="anonymous"
     ></script>
-    <script src="./assets/js/app.js"></script>
+    <script defer src="./assets/js/app.js"></script>
     <link rel="stylesheet" href="./css/style.css" />
     <title>Adam Ralph</title>
   </head>
@@ -22,14 +22,14 @@
     <div class="container">
       <header id="header" class="header">
         <!-- Navigation -->
-        <nav class="header__nav">
-          <button class="nav-toggle" aria-label="open navigation">
-            <span class="hamburger"></span>
-          </button>
-          <a href="#about" class="header__nav__link">about</a>
-          <a href="#projects" class="header__nav__link">projects</a>
+        <button class="nav-toggle" aria-label="open navigation">
+          <span class="hamburger"></span>
+        </button>
+        <nav class="nav">
+          <a href="#about" class="nav__link">about</a>
+          <a href="#projects" class="nav__link">projects</a>
           <button class="btn nav__btn">
-            <a href="#contact" class="header__btn__text">Lets Talk</a>
+            <a href="#contact" class="nav__btn-text">Lets Talk</a>
           </button>
         </nav>
         <!-- Logo -->
