--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,10 @@
         <nav class="nav">
           <a href="#about" class="nav__link">about</a>
           <a href="#projects" class="nav__link">projects</a>
-          <button class="btn nav__btn">
-            <a href="#contact" class="nav__btn-text">Lets Talk</a>
-          </button>
+
+          <a href="#contact" class="nav__btn-text"
+            ><button class="btn nav__btn nav__link">Lets Talk</button></a
+          >
         </nav>
         <!-- Logo -->
         <div class="header__logo">
