--- a/public/index.html
+++ b/public/index.html
@@ -22,20 +22,22 @@
     <div class="container">
       <header id="header" class="header">
         <!-- Navigation -->
-        <button class="nav-toggle" aria-label="open navigation">
-          <span class="hamburger"></span>
-        </button>
-        <nav class="nav">
-          <a href="#about" class="nav__link">about</a>
-          <a href="#projects" class="nav__link">projects</a>
+        <div class="hamburger-logo">
+          <button class="nav-toggle" aria-label="open navigation">
+            <span class="hamburger"></span>
+          </button>
+          <nav class="nav">
+            <a href="#about" class="nav__link">about</a>
+            <a href="#projects" class="nav__link">projects</a>
 
-          <a href="#contact" class="nav__btn-text"
-            ><button class="btn nav__btn nav__link">Lets Talk</button></a
-          >
-        </nav>
-        <!-- Logo -->
-        <div class="header__logo">
-          <h1 class="header__logo__heading">adam</h1>
+            <a href="#contact" class="nav__btn-text"
+              ><button class="btn nav__btn nav__link">Lets Talk</button></a
+            >
+          </nav>
+          <!-- Logo -->
+          <div class="header__logo">
+            <h1 class="header__logo__heading">adam</h1>
+          </div>
         </div>
 
         <!-- Header image -->
