--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   <body>
     <div class="container">
       <header id="header" class="header">
-        <!-- Navigation -->
+        <!-- Navigation mobile -->
         <div class="hamburger-logo">
           <button class="nav-toggle" aria-label="open navigation">
             <span class="hamburger"></span>
@@ -35,10 +35,24 @@
             >
           </nav>
           <!-- Logo -->
-          <div class="header__logo">
+          <div class="header__logo--mobile">
             <h1 class="header__logo__heading">adam</h1>
           </div>
         </div>
+
+        <!-- Logo -->
+        <div class="header__logo">
+          <h1 class="header__logo__heading">adam</h1>
+        </div>
+        <!-- Navigation -->
+        <nav class="nav">
+          <a href="#about" class="nav__link">about</a>
+          <a href="#projects" class="nav__link">projects</a>
+
+          <a href="#contact" class="nav__btn-text"
+            ><button class="btn nav__btn nav__link">Lets Talk</button></a
+          >
+        </nav>
 
         <!-- Header image -->
         <div class="header__image"></div>
