--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
           </div>
         </div>
 
-        <!-- Logo -->
+        <!-- Navigation Tablet/Desktop -->
         <div class="header__logo">
           <h1 class="header__logo__heading">adam</h1>
         </div>
