--- a/public/index.html
+++ b/public/index.html
@@ -35,14 +35,42 @@
             >
           </nav>
           <!-- Logo -->
-          <div class="header__logo--mobile">
-            <h1 class="header__logo__heading">adam</h1>
+          <div class="logo--mobile">
+            <h1 class="logo__heading">adam</h1>
           </div>
         </div>
 
         <!-- Navigation Tablet/Desktop -->
         <div class="header__logo">
-          <h1 class="header__logo__heading">adam</h1>
+          <h1 class="logo__heading">adam</h1>
+        </div>
+
+        <!-- Header image -->
+        <div class="header__image"></div>
+
+        <!-- Social links -->
+        <div class="header__social">
+          <!-- Twitter -->
+          <a
+            href="http://twitter.com/adamjralph"
+            class="header__social__link social__link--twitter"
+          >
+            <i class="fa-brands fa-twitter header__social__icon--twitter"></i>
+          </a>
+          <!-- Youtube-->
+          <a
+            href="https://www.youtube.com/channel/UCRMH3kvPD8o1Khssr4A8EWg"
+            class="social__link social__link--youtube"
+          >
+            <i class="fa-brands fa-youtube header__social__icon--youtube"></i>
+          </a>
+          <!-- Github -->
+          <a
+            href="https://github.com/adamjralph"
+            class="social__link social__link--github"
+          >
+            <i class="fa-brands fa-github header__social__icon--github"></i>
+          </a>
         </div>
         <!-- Navigation -->
         <nav class="nav">
@@ -53,34 +81,6 @@
             ><button class="btn nav__btn nav__link">Lets Talk</button></a
           >
         </nav>
-
-        <!-- Header image -->
-        <div class="header__image"></div>
-
-        <!-- Social links -->
-        <div class="header__social">
-          <!-- Twitter -->
-          <a
-            href="http://twitter.com/adamjralph"
-            class="header__social__link header__social__link--twitter"
-          >
-            <i class="fa-brands fa-twitter header__social__icon--twitter"></i>
-          </a>
-          <!-- Youtube-->
-          <a
-            href="https://www.youtube.com/channel/UCRMH3kvPD8o1Khssr4A8EWg"
-            class="header__social__link header__social__link--youtube"
-          >
-            <i class="fa-brands fa-youtube header__social__icon--youtube"></i>
-          </a>
-          <!-- Github -->
-          <a
-            href="https://github.com/adamjralph"
-            class="header__social__link header__social__link--github"
-          >
-            <i class="fa-brands fa-github header__social__icon--github"></i>
-          </a>
-        </div>
       </header>
     </div>
     <div class="container">
