Header almost done

--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,8 @@
             <a href="#about" class="nav__link">about</a>
             <a href="#projects" class="nav__link">projects</a>
 
-            <a href="#contact" class="nav__btn-text nav__link"
-              ><button class="btn nav__btn">Lets Talk</button></a
+            <a href="#contact" class="nav__btn-text"
+              ><button class="btn nav__btn nav__link">Lets Talk</button></a
             >
           </nav>
           <!-- Logo -->
