--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
       <main id="main" class="main">
         <section id="hero" class="hero">
           <h1 class="hero__heading">
-            Hi, I'm a front end developer based in Melbourne
+            Hi, I am a front end developer based in Melbourne
           </h1>
         </section>
       </main>
