--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
           <!-- Twitter -->
           <a
             href="http://twitter.com/adamjralph"
-            class="header__social__link social__link--twitter"
+            class="social__link social__link--twitter"
           >
             <i class="fa-brands fa-twitter header__social__icon--twitter"></i>
           </a>
@@ -85,7 +85,11 @@
     </div>
     <div class="container">
       <main id="main" class="main">
-        <section id="hero" class="hero"></section>
+        <section id="hero" class="hero">
+          <h1 class="hero__heading">
+            Hi, I am a front end developer based in Melbourne
+          </h1>
+        </section>
       </main>
     </div>
   </body>
