--- a/src/index.html
+++ b/src/index.html
@@ -86,10 +86,11 @@
     <div class="container">
       <main id="main" class="main">
         <section id="hero" class="hero">
-          <h1 class="hero__heading">
-            Hi, I am a front end developer based in Melbourne
-          </h1>
+          <h1 class="hero__heading">Welcome to my portfolio...</h1>
         </section>
+        <h1 class="hero__heading hero__heading--2">
+          I'm a front end developer based in Melbourne
+        </h1>
       </main>
     </div>
   </body>
